--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,8 +37,7 @@
             android:text="C"
             android:textSize="25sp"
             android:background="@drawable/round_style"
-            android:onClick="onClear"
-            tools:ignore="OnClick" />
+            tools:ignore="HardcodedText,NestedWeights,OnClick" />
 
         <Button
             android:id="@+id/btnBraces"
@@ -48,7 +47,8 @@
             android:layout_weight="1"
             android:text="()"
             android:textSize="25sp"
-            android:background="@drawable/round_style"/>
+            android:background="@drawable/round_style"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/btnMod"
@@ -58,7 +58,8 @@
             android:layout_weight="1"
             android:text="%"
             android:textSize="25sp"
-            android:background="@drawable/round_style"/>
+            android:background="@drawable/round_style"
+            tools:ignore="HardcodedText" />
 
 
 
@@ -72,7 +73,7 @@
             android:text="/"
             android:textSize="25sp"
             android:onClick="onOperator"
-            tools:ignore="OnClick" />
+            tools:ignore="HardcodedText,OnClick" />
 
     </LinearLayout>
 
@@ -248,14 +249,15 @@
         android:layout_weight="1">
 
         <Button
-            android:id="@+id/btnPOrM"
+            android:id="@+id/btnPM"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="+/-"
             android:textSize="25sp"
-            android:background="@drawable/round_style"/>
+            android:background="@drawable/round_style"
+            tools:ignore="HardcodedText,NestedWeights" />
 
         <Button
             android:id="@+id/btnZero"
