--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="20dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
+    android:paddingBottom="15dp"
+    android:background="@color/black"
     tools:context=".MainActivity"
     android:orientation="vertical">
 
@@ -12,15 +16,25 @@
         android:id="@+id/tvInput"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="#0C0C0C"
+        android:background="@color/black"
         android:padding="10dp"
         android:textSize="48sp"
         android:gravity="end|bottom" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="#0C0C0C"/>
+        android:layout_height="220dp"
+        android:background="@color/black"
+        android:orientation="horizontal"
+        android:gravity="start|bottom">
+
+        <Button
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/clock"
+            android:textColor="@color/green"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,6 +49,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="C"
+            android:textColor="@color/red"
             android:textSize="25sp"
             android:background="@drawable/round_style"
             tools:ignore="HardcodedText,NestedWeights,OnClick" />
@@ -46,6 +61,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="()"
+            android:textColor="@color/green"
             android:textSize="25sp"
             android:background="@drawable/round_style"
             tools:ignore="HardcodedText" />
@@ -57,6 +73,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="%"
+            android:textColor="@color/green"
             android:textSize="25sp"
             android:background="@drawable/round_style"
             tools:ignore="HardcodedText" />
@@ -71,6 +88,7 @@
             android:layout_weight="1"
             android:background="@drawable/round_style"
             android:text="/"
+            android:textColor="@color/green"
             android:textSize="25sp"
             android:onClick="onOperator"
             tools:ignore="HardcodedText,OnClick" />
@@ -114,7 +132,8 @@
             android:textSize="25sp"
             android:background="@drawable/round_style"
             android:text="9"
-            android:onClick="onDigit" />
+            android:onClick="onDigit"
+            tools:ignore="HardcodedText" />
 
 
         <Button
@@ -126,8 +145,9 @@
             android:textSize="25sp"
             android:background="@drawable/round_style"
             android:text="*"
+            android:textColor="@color/green"
             android:onClick="onOperator"
-            tools:ignore="NestedWeights,OnClick" />
+            tools:ignore="HardcodedText,NestedWeights,OnClick" />
 
     </LinearLayout>
 
@@ -180,11 +200,12 @@
             android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:textSize="25sp"
+            android:textSize="35sp"
             android:background="@drawable/round_style"
             android:text="-"
+            android:textColor="@color/green"
             android:onClick="onOperator"
-            tools:ignore="OnClick" />
+            tools:ignore="HardcodedText,OnClick" />
 
     </LinearLayout>
 
@@ -214,7 +235,9 @@
             android:layout_weight="1"
             android:background="@drawable/round_style"
             android:text="2"
-            android:onClick="onDigit" />
+            android:textSize="25sp"
+            android:onClick="onDigit"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/btnThree"
@@ -234,10 +257,11 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="+"
-            android:textSize="25sp"
+            android:textColor="@color/green"
+            android:textSize="30sp"
             android:background="@drawable/round_style"
             android:onClick="onOperator"
-            tools:ignore="OnClick" />
+            tools:ignore="HardcodedText,OnClick" />
 
 
     </LinearLayout>
@@ -280,7 +304,7 @@
             android:text="."
             android:background="@drawable/round_style"
             android:textSize="25sp"
-            tools:ignore="NestedWeights,OnClick" />
+            tools:ignore="HardcodedText,NestedWeights,OnClick" />
 
         <Button
             android:id="@+id/btnEqual"
@@ -288,11 +312,11 @@
             android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:onClick="onEqual"
             android:text="="
-            android:background="@drawable/round_style"
+            android:textColor="@color/black"
+            android:background="@drawable/equal_style"
             android:textSize="25sp"
-            tools:ignore="NestedWeights,OnClick" />
+            tools:ignore="HardcodedText,NestedWeights" />
 
 
     </LinearLayout>
