--- a/app/src/main/res/values-notnight/splash.xml
+++ b/app/src/main/res/values-notnight/splash.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="Theme.AppCompat.Splash" parent="Theme.SplashScreen">
 
+        <item name="windowSplashScreenBackground">#F3F3F3</item>
+
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher_round</item>
+
+        <item name="windowSplashScreenAnimationDuration">4000</item>
+
+        <item name="postSplashScreenTheme">@style/Theme.SamsungCalculator</item>
+    </style>
 </resources>
