--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -131,8 +131,7 @@
             android:textSize="25sp"
             android:textColor="@color/white"
             android:background="@drawable/round_style"
-            android:text="8"
-            android:onClick="onDigit" />
+            android:text="8" />
 
         <Button
             android:id="@+id/btnNine"
@@ -144,7 +143,6 @@
             android:textColor="@color/white"
             android:background="@drawable/round_style"
             android:text="9"
-            android:onClick="onDigit"
             tools:ignore="HardcodedText" />
 
 
@@ -175,7 +173,6 @@
             android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:onClick="onDigit"
             android:textSize="25sp"
             android:textColor="@color/white"
             android:background="@drawable/round_style"
@@ -191,8 +188,7 @@
             android:textSize="25sp"
             android:textColor="@color/white"
             android:background="@drawable/round_style"
-            android:text="5"
-            android:onClick="onDigit" />
+            android:text="5" />
 
         <Button
             android:id="@+id/btnSix"
@@ -203,8 +199,7 @@
             android:textSize="25sp"
             android:background="@drawable/round_style"
             android:text="6"
-            android:textColor="@color/white"
-            android:onClick="onDigit" />
+            android:textColor="@color/white" />
 
 
 
@@ -234,7 +229,6 @@
             android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:onClick="onDigit"
             android:textColor="@color/white"
             android:background="@drawable/round_style"
             android:text="1"
@@ -250,7 +244,6 @@
             android:background="@drawable/round_style"
             android:text="2"
             android:textSize="25sp"
-            android:onClick="onDigit"
             android:textColor="@color/white"
             tools:ignore="HardcodedText" />
 
@@ -263,8 +256,7 @@
             android:background="@drawable/round_style"
             android:text="3"
             android:textColor="@color/white"
-            android:textSize="25sp"
-            android:onClick="onDigit" />
+            android:textSize="25sp" />
 
         <Button
             android:id="@+id/btnAdd"
@@ -307,7 +299,6 @@
             android:layout_weight="1"
             android:textColor="@color/white"
             android:background="@drawable/round_style"
-            android:onClick="onDigit"
             android:textSize="25sp"
             android:text="0" />
 
@@ -317,7 +308,6 @@
             android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:onClick="onDecimalPoint"
             android:text="."
             android:textColor="@color/white"
             android:background="@drawable/round_style"
