--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,23 +26,64 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:background="@color/black"
-        android:orientation="horizontal"
+        android:orientation="vertical"
+        android:paddingBottom="15dp"
         android:gravity="start|bottom">
 
-        <Button
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:background="@drawable/clock"
-            android:textColor="@color/green"/>
+<!--        <Button-->
+<!--            android:layout_width="20dp"-->
+<!--            android:layout_height="20dp"-->
+<!--            android:background="@drawable/clock"-->
+<!--            android:textColor="@color/green"/>-->
 
-        <ProgressBar
-            android:layout_width="0dp"
+<!--        <ProgressBar-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:indeterminate="false"-->
+<!--            android:layout_weight="1"-->
+<!--            android:outlineSpotShadowColor="@color/white"-->
+<!--            android:outlineAmbientShadowColor="@color/white"-->
+<!--            style="?android:attr/progressBarStyleHorizontal"/>-->
+
+        <LinearLayout
+            android:id="@+id/ll_icons"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:indeterminate="false"
-            android:layout_weight="1"
-            android:outlineSpotShadowColor="@color/white"
-            android:outlineAmbientShadowColor="@color/white"
-            style="?android:attr/progressBarStyleHorizontal"/>
+            android:orientation="horizontal"
+            android:layout_marginBottom="25dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp">
+
+            <ImageButton
+                android:id="@+id/clock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/clock"
+                android:background="@color/black"/>
+
+            <ImageButton
+                android:id="@+id/calculator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:src="@drawable/ic_baseline_calculate_24"
+                android:background="@color/black"/>
+
+            <ImageButton
+                android:id="@+id/delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:src="@drawable/ic_baseline_delete_forever_24"
+                android:background="@color/black"/>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#252525"/>
 
     </LinearLayout>
 
@@ -116,7 +157,7 @@
             android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:text="7"
+            android:text="@string/_7"
             android:textColor="@color/white"
             android:textSize="25sp"
             android:background="@drawable/round_style"
@@ -131,7 +172,7 @@
             android:textSize="25sp"
             android:textColor="@color/white"
             android:background="@drawable/round_style"
-            android:text="8" />
+            android:text="@string/_8" />
 
         <Button
             android:id="@+id/btnNine"
@@ -176,7 +217,7 @@
             android:textSize="25sp"
             android:textColor="@color/white"
             android:background="@drawable/round_style"
-            android:text="4"
+            android:text="@string/_4"
             tools:ignore="NestedWeights" />
 
         <Button
@@ -188,7 +229,7 @@
             android:textSize="25sp"
             android:textColor="@color/white"
             android:background="@drawable/round_style"
-            android:text="5" />
+            android:text="@string/_5" />
 
         <Button
             android:id="@+id/btnSix"
@@ -198,7 +239,7 @@
             android:layout_weight="1"
             android:textSize="25sp"
             android:background="@drawable/round_style"
-            android:text="6"
+            android:text="@string/_6"
             android:textColor="@color/white" />
 
 
@@ -231,7 +272,7 @@
             android:layout_weight="1"
             android:textColor="@color/white"
             android:background="@drawable/round_style"
-            android:text="1"
+            android:text="@string/_1"
             android:textSize="25sp"
             tools:ignore="NestedWeights" />
 
@@ -254,7 +295,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/round_style"
-            android:text="3"
+            android:text="@string/_3"
             android:textColor="@color/white"
             android:textSize="25sp" />
 
@@ -300,7 +341,7 @@
             android:textColor="@color/white"
             android:background="@drawable/round_style"
             android:textSize="25sp"
-            android:text="0" />
+            android:text="@string/_0" />
 
         <Button
             android:id="@+id/btnDot"
