--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,24 +58,30 @@
                 android:id="@+id/clock"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@color/black"
+                android:contentDescription="@string/app_name"
                 android:src="@drawable/clock"
-                android:background="@color/black"/>
+                tools:ignore="SpeakableTextPresentCheck" />
 
             <ImageButton
                 android:id="@+id/calculator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
+                android:background="@color/black"
+                android:contentDescription="@string/app_name"
                 android:src="@drawable/ic_baseline_calculate_24"
-                android:background="@color/black"/>
+                tools:ignore="SpeakableTextPresentCheck" />
 
             <ImageButton
                 android:id="@+id/delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
+                android:background="@color/black"
+                android:contentDescription="@string/app_name"
                 android:src="@drawable/ic_baseline_delete_forever_24"
-                android:background="@color/black"/>
+                tools:ignore="SpeakableTextPresentCheck" />
 
         </LinearLayout>
 
