--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,11 +85,10 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/line"
+        <View
+            style="@style/Divider.Horizontal"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#252525"/>
+            android:layout_height="1dp"/>
 
     </LinearLayout>
 
