changed the font family

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:layout_height="150dp"
         android:background="@color/black"
         android:padding="10dp"
+        android:fontFamily="@font/poppins"
         android:textColor="@color/white"
         android:textSize="48sp"
         android:gravity="end|bottom" />
@@ -104,6 +105,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="C"
+            android:fontFamily="@font/poppins"
             android:textColor="@color/red"
             android:textSize="25sp"
             android:background="@drawable/round_style"
@@ -117,6 +119,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="( )"
+            android:fontFamily="@font/poppins"
             android:textColor="@color/green"
             android:textSize="25sp"
             android:background="@drawable/round_style"
@@ -130,6 +133,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="%"
+            android:fontFamily="@font/poppins"
             android:textColor="@color/green"
             android:textSize="25sp"
             android:background="@drawable/round_style"
@@ -146,6 +150,7 @@
             android:layout_weight="1"
             android:background="@drawable/round_style"
             android:text="/"
+            android:fontFamily="@font/poppins"
             android:textColor="@color/green"
             android:textSize="25sp"
             tools:ignore="HardcodedText,OnClick"
@@ -166,6 +171,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="@string/_7"
+            android:fontFamily="@font/poppins"
             android:textColor="@color/white"
             android:textSize="25sp"
             android:background="@drawable/round_style"
@@ -179,6 +185,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:fontFamily="@font/poppins"
             android:textColor="@color/white"
             android:background="@drawable/round_style"
             android:text="@string/_8"
@@ -191,6 +198,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:fontFamily="@font/poppins"
             android:textColor="@color/white"
             android:background="@drawable/round_style"
             android:text="9"
@@ -205,6 +213,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:fontFamily="@font/poppins"
             android:background="@drawable/round_style"
             android:text="*"
             android:textColor="@color/green"
@@ -227,6 +236,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:fontFamily="@font/poppins"
             android:textColor="@color/white"
             android:background="@drawable/round_style"
             android:text="@string/_4"
@@ -240,6 +250,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:fontFamily="@font/poppins"
             android:textColor="@color/white"
             android:background="@drawable/round_style"
             android:text="@string/_5"
@@ -252,6 +263,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:textSize="25sp"
+            android:fontFamily="@font/poppins"
             android:background="@drawable/round_style"
             android:text="@string/_6"
             android:textColor="@color/white"
@@ -266,6 +278,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:textSize="35sp"
+            android:fontFamily="@font/poppins"
             android:background="@drawable/round_style"
             android:text="-"
             android:textColor="@color/green"
@@ -289,6 +302,7 @@
             android:textColor="@color/white"
             android:background="@drawable/round_style"
             android:text="@string/_1"
+            android:fontFamily="@font/poppins"
             android:textSize="25sp"
             tools:ignore="NestedWeights"
             style="?android:attr/buttonBarButtonStyle" />
@@ -301,6 +315,7 @@
             android:layout_weight="1"
             android:background="@drawable/round_style"
             android:text="2"
+            android:fontFamily="@font/poppins"
             android:textSize="25sp"
             android:textColor="@color/white"
             tools:ignore="HardcodedText"
@@ -314,6 +329,7 @@
             android:layout_weight="1"
             android:background="@drawable/round_style"
             android:text="@string/_3"
+            android:fontFamily="@font/poppins"
             android:textColor="@color/white"
             android:textSize="25sp"
             style="?android:attr/buttonBarButtonStyle" />
@@ -325,6 +341,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="+"
+            android:fontFamily="@font/poppins"
             android:textColor="@color/green"
             android:textSize="30sp"
             android:background="@drawable/round_style"
@@ -347,6 +364,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="+/-"
+            android:fontFamily="@font/poppins"
             android:textColor="@color/white"
             android:textSize="25sp"
             android:background="@drawable/round_style"
@@ -363,6 +381,7 @@
             android:background="@drawable/round_style"
             android:textSize="25sp"
             android:text="@string/_0"
+            android:fontFamily="@font/poppins"
             style="?android:attr/buttonBarButtonStyle" />
 
         <Button
@@ -372,6 +391,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="."
+            android:fontFamily="@font/poppins"
             android:textColor="@color/white"
             android:background="@drawable/round_style"
             android:textSize="25sp"
@@ -385,6 +405,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="="
+            android:fontFamily="@font/poppins"
             android:textColor="@color/black"
             android:background="@drawable/equal_style"
             android:textSize="25sp"
